fix contrast in navbar

--- a/final-project-test/scss/_small.scss
+++ b/final-project-test/scss/_small.scss
@@ -49,7 +49,7 @@ a, a:visited, a:hover {
 }
 .salmon {
     padding-top: .8rem;
-    color: $salmon;
+    color: $tan;
 }
 .stats {
     position: absolute;
@@ -58,7 +58,7 @@ a, a:visited, a:hover {
     z-index: 20;
     padding: .7rem;
     line-height: 1rem;
-    color: $salmon;
+    color: $tan;
 }
 .pad-left {
     padding-left: 1rem;
